src/assets/base.css
:root {
  --accent: #38bdf8;
  --bg:     #0d0d0d;
  --bg-alt: #141414;
  --surface:#1a1a1a;
  --border: #262626;
  --text:   #f0f0f0;
  --muted:  #888888;
}

body {
  background-color: var(--bg);
  color: var(--text);
  height: 100vh;
  font-family: 'Inter', sans-serif;
}

